--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ Hero
   padding: 1.6rem 2.4rem;
   border-radius: 0.5rem;
   flex-grow: 1;
-  width: 50%;
+  flex-shrink: 1;
 }
 
 .hero-cta input {
