--- a/css/style.css
+++ b/css/style.css
@@ -316,20 +316,20 @@ Hero
 .hero-cta {
   display: flex;
   justify-content: flex-start;
+  flex-direction: column;
 }
 
 .hero-cta input,
 .hero-cta button {
-  margin-right: 1.6rem;
   padding: 1.6rem 2.4rem;
   border-radius: 0.5rem;
   flex-grow: 1;
   flex-shrink: 1;
-  width: 50%;
 }
 
 .hero-cta input {
   border: 1px solid var(--color-border);
+  margin-bottom: 1.6rem;
 }
 
 .hero-cta input::placeholder {
